Fixed bottom menu spacing.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,7 +32,7 @@ ul {
 }
 
 li {
-  padding: 5px 0 5px 0;
+  padding: 5px;
 }
 
 a {
@@ -50,7 +50,6 @@ footer {
 nav {
   display: inline-block;
 }
-
 span {
   font-size: 11px;
 }
